ISSUE - JS function limitNavLinkItemWidth breaks the frontend

--- a/scss/mixins/index.scss
+++ b/scss/mixins/index.scss
@@ -10,7 +10,7 @@
         @media screen and (max-width: 1200px){
             color: white;
             background-color: rgb(115, 4, 4);
-            // width: 7rem;
+            width: 7rem;
             height: 2.5rem;
             //corrective measure to utilise space 
             transform: rotate(90deg);
